syntax = "proto3";

message LoginGrpcRequest{
  string email = 1;
  string password = 2;
}

message LoginGrpcResponse{
  int32 httpStatusCode = 1;
  string refreshToken = 2;
  string jwtToken = 3;
}

message RegisterUserGrpcRequest{
  string mailConfirmationToken = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserGrpcResponse{
  int32 httpStatusCode = 1;
  string refreshToken = 2;
  string jwtToken = 3;
}

message SendEmailConfirmationGrpcRequest{
  string email = 1;
}


message SendEmailConfirmationGrpcResponse{
  int32 httpStatusCode = 1;
}

service AuthMicroservice{
  rpc RegisterUser (RegisterUserGrpcRequest) returns (RegisterUserGrpcResponse);
  rpc SendEmailConfirmation (SendEmailConfirmationGrpcRequest) returns (SendEmailConfirmationGrpcResponse);
}